--- a/GGames/Aplicacion/templates/base_generic.html
+++ b/GGames/Aplicacion/templates/base_generic.html
@@ -30,6 +30,7 @@
                 <li class="nav-item"><a href="{% url 'index' %}" class="nav-link">Inicio</a></li>
                 <li class="nav-item"><a href="{% url 'juegos' %}" class="nav-link">Juegos</a></li>
                 <li class="nav-item"><a href="{% url 'tarJetas' %}" class="nav-link">Tarjetas de regalo</a></li>
+                <li class="nav-item"><a href="{% url 'ju' %}" class="nav-link">Lista de Juegos</a></li>
               </ul>
             </div>
           </nav>
