--- a/GGames/Aplicacion/static/css/estilos_inicio.css
+++ b/GGames/Aplicacion/static/css/estilos_inicio.css
@@ -134,3 +134,63 @@ footer {
 #con{
     margin-bottom: 10px;
 }
+/*Formularios*/
+input {
+    float: left;
+    width: 200px;
+    margin-bottom: 10px;
+}
+  
+label {
+    font-family: Prisma;
+    color: #ffffff;
+    clear: both;
+    float: left;
+    width: 180px;
+}
+  
+button {
+    clear: both;
+    float: left;
+    width: 70px;
+}
+  
+.error-control {
+    border: 1px solid rgb(255, 255, 0);
+}
+  
+label.error {
+    color: rgb(200, 255, 0);
+    width: 300px;
+    font-size: 0.8em;
+    margin-top: -5px;
+    margin-bottom: 10px;
+}
+#forma{
+    width: auto;
+}
+#osito{
+    position:relative;
+    margin-top: 10px;
+    margin-bottom: 70px;
+    margin-left: 15px;
+}
+#osito img{
+    width: 150px;
+    height: 100px;
+}
+
+#proble { 
+    margin-top: 120px;
+    margin-bottom: 10px;
+    margin-left: -150px;
+    color:#ffffff;    
+}
+
+#proble p{
+    display: none;
+}
+
+#prob{
+    width: 100px;
+}
