--- a/GGames/Aplicacion/templates/tarjetas.html
+++ b/GGames/Aplicacion/templates/tarjetas.html
@@ -11,7 +11,7 @@
             <div class="card-body">
               <h4 class="card-title">Google Play $10 - USA</h4>
               <p class="card-text">Antes de canjear el código, lea detenidamente el siguiente tutorial, incluso si ha canjeado códigos anteriormente, ya que si su cuenta no esta bien configurada podría bloquear el código.</p>
-              <a href="#" class="btn boton">$8.390</a>
+              <a href="{% url 'formulario' %}" class="btn boton">$8.390</a>
               <a target="_blank" href="https://chilecodes.cl/cambiar-pais/cambiar-pais.html" class="btn boton">Tutorial</a>
             </div>
           </div>          
@@ -21,7 +21,7 @@
             <div class="card-body">
               <h4 class="card-title">Google Play $25 - USA</h4>
               <p class="card-text">Antes de canjear el código, lea detenidamente el siguiente tutorial, incluso si ha canjeado códigos anteriormente, ya que si su cuenta no esta bien configurada podría bloquear el código. </p>
-              <a href="#" class="btn boton">$21.290</a>
+              <a href="{% url 'formulario' %}" class="btn boton">$21.290</a>
               <a target="_blank" href="https://chilecodes.cl/cambiar-pais/cambiar-pais.html" class="btn boton">Tutorial</a>
             </div>
             <img class="card-img-bottom" src="{% static 'images/play_25.jpg' %}" alt="Google play 25">                          
@@ -33,7 +33,7 @@
             <div class="card-body">
               <h4 class="card-title">Google Play $50 - USA</h4>
               <p class="card-text">Antes de canjear el código, lea detenidamente el siguiente tutorial, incluso si ha canjeado códigos anteriormente, ya que si su cuenta no esta bien configurada podría bloquear el código.</p>
-              <a href="#" class="btn btn-primary boton">$41.990</a>
+              <a href="{% url 'formulario' %}" class="btn btn-primary boton">$41.990</a>
               <a target="_blank" href="https://chilecodes.cl/cambiar-pais/cambiar-pais.html" class="btn boton">Tutorial</a>
             </div>                      
           </div>          
@@ -48,7 +48,7 @@
               <div class="card-body">
                 <h4 class="card-title">Xbox Gift Card $10.000 Chile</h4>
                 <p class="card-text">Canjear en: http://microsoft.com/redeem</p>
-                <a href="#" class="btn btn-primary boton">$10.000</a>
+                <a href="{% url 'formulario' %}" class="btn btn-primary boton">$10.000</a>
               </div>
           </div>          
         </div>    
@@ -57,7 +57,7 @@
             <div class="card-body">
               <h4 class="card-title">Xbox Gift Card $20.000 Chile</h4>
               <p class="card-text">Canjear en: http://microsoft.com/redeem</p>
-              <a href="#" class="btn btn-primary boton">$20.000</a>
+              <a href="{% url 'formulario' %}" class="btn btn-primary boton">$20.000</a>
             </div>
             <img class="card-img-bottom" src="{% static 'images/xbox20.jpg' %}" alt="Xbox 20">                        
           </div>          
@@ -68,7 +68,7 @@
             <div class="card-body">
               <h4 class="card-title">Playstation Plus 12 Meses Chile</h4>
               <p class="card-text">Algunos codigos permiten ser canjeados en cuentas de otros paises, sin embargo solo se asegura que funciona para el pais que es ofrecido. Este codigo puede ser canjeado en cuentas de otros paises de America.</p>
-              <a href="#" class="btn btn-primary boton">$35.990</a>
+              <a href="{% url 'formulario' %}" class="btn btn-primary boton">$35.990</a>
             </div>                       
           </div>          
         </div>
